# irgmit-ur-launch

./: CMakeLists.txt  package.xml
calibs/: ur5e_ip2_calibration.yaml
cfg/: cartesian_controllers.yaml
etc/: ur5e_ip1_calibration.yaml
launch/: load_ur5e_hande.launch  load_ur_hande.launch  ur5e_hande_ip10_melodic.launch  ur5e_hande_ip10_melodic_cartesian.launch  ur5e_hande_ip11_melodic.launch  ur5e_ip10_melodic.launch  ur5e_ip11_melodic.launch  ur5e_ip1_melodic.launch  ur5e_ip2_foxy.launch.py  ur5e_ip2_humble.launch.py  ur5e_ip2_melodic.launch
resources/: external_control.urscript  rtde_output_recipe.txt
scripts/: external_control_disable.py  external_control_enable.py
src/: freedrive_example.cpp  irg_ur_home.cpp  open_gripper.cpp
